tests/invalid/generic_explicit_argument_count_mismatch.wio
fn MakeLabel<T, U>(left: T, right: U) -> string {
    return "invalid";
}

fn Entry() -> i32 {
    let text = MakeLabel<i32>(7, "oops");
    return 0;
}
